--- a/dashboard.html
+++ b/dashboard.html
@@ -144,13 +144,22 @@
             </div>
 
             <!-- Account Section -->
-            <div class="account flex items-center space-x-4 cursor-pointer  bg-[#3B28CC] p-2 rounded-lg  hover:bg-[] transition-all duration-300 ease-in-out shadow-sm"
+            <div class="account flex items-center space-x-4 cursor-pointer bg-[#3B28CC] p-4 rounded-lg hover:bg-[#4e32a9] transition-all duration-300 ease-in-out shadow-sm"
                 onclick="window.location.href='./profile.html'">
-                <span class="font-semibold text-white hover:text-white ">Hello <i class="fa-regular fa-face-grin-wide"></i> <span
-                        id="user-firstname"></span></span>
-                <img id="profileImagePreview" alt="Profile Picture"
-                    class="w-10 h-10 rounded-full object-cover border-2 border-[#5e3dc6] hover:border-[#4e32a9] transition-all duration-300 ease-in-out">
+
+                <!-- Profile Image -->
+                <img id="dashboardLogo" alt="Profile Picture"
+                    class="w-12 h-12 rounded-full object-cover border-2 border-[#5e3dc6] hover:border-[#4e32a9] transition-all duration-300 ease-in-out">
+
+                <!-- Text Content -->
+                <div class="flex flex-col">
+                    <span class="font-semibold text-white hover:text-white">
+                        Hello, <span id="user-firstname"></span><i class="fa-regular fa-face-grin-wide"></i>
+                    </span>
+                    <span id="user-email" class="text-sm text-gray-200 mt-1"></span>
+                </div>
             </div>
+
 
             <!-- Mobile Menu Button -->
             <div class="md:hidden flex items-center">
@@ -215,7 +224,7 @@
                             </div>
                             <div class="balance-details">
                                 <p>Nigerian Naira</p>
-                                <h1 id="user-balance">₦</h1>
+                                <h1 id="user-balance"></h1>
                                 <span id="balance-timestamp" style="font-size: 14px;"> Last updated 53s ago</span>
                             </div>
                         </div>
@@ -233,9 +242,12 @@
 
                     <div class="action-trigger"><i class="fa-solid fa-comment-dollar"></i><a
                             href="./send.html">Spend</a></div>
-                    <div class="action-trigger"><i class="fa-solid fa-piggy-bank"></i><a href="./giftcards.html">Save</a></div>
-                    <div class="action-trigger"><i class="fa-solid fa-landmark"></i><a href="./giftcards.html">Borrow</a></div>
-                    <div class="action-trigger"><i class="fa-solid fa-hand-holding-dollar"></i><a href="./giftcards.html">Invest</a>
+                    <div class="action-trigger"><i class="fa-solid fa-piggy-bank"></i><a
+                            href="./giftcards.html">Save</a></div>
+                    <div class="action-trigger"><i class="fa-solid fa-landmark"></i><a
+                            href="./giftcards.html">Borrow</a></div>
+                    <div class="action-trigger"><i class="fa-solid fa-hand-holding-dollar"></i><a
+                            href="./giftcards.html">Invest</a>
                     </div>
 
                 </div>
@@ -244,69 +256,23 @@
 
             <div class="beneficiary-topsectiondetails">
                 <p>Beneficiaries</p>
-                <p>View All</p>
+                <p id="toggle-view">View All</p>
             </div>
 
-            <div class="beneficiary-sectiondetails">
-                <div class="beneficairy-contact">
-                    <div class="beneficiary-initials">A</div>
-                    <p>Adedokun Adeshina</p>
-                </div>
-                <div class="beneficairy-contact">
-                    <div class="beneficiary-initials">A</div>
-                    <p>Adedokun Adeshina</p>
-                </div>
-                <div class="beneficairy-contact">
-                    <div class="beneficiary-initials">A</div>
-                    <p>Adedokun Adeshina</p>
-                </div>
-                <div class="beneficairy-contact">
-                    <div class="beneficiary-initials">A</div>
-                    <p>Adedokun Adeshina</p>
-                </div>
+            <div class="beneficiary-section hidden flex items-center">
+                <!-- Add your beneficiary details here -->
+
             </div>
+
+
             <div class="transactional-history">
                 <div class="max-w-5xl mx-auto px-4 py-8">
                     <div class="bg-white shadow-md rounded-lg overflow-hidden">
                         <!-- Transaction list -->
-                        <ul class="divide-y divide-gray-200">
-                            <!-- Transaction item -->
-                            <li class="flex items-center justify-between py-4 px-6">
-                                <div class="flex items-center space-x-3">
-                                    <img src="https://example.com/kuda-logo.png" alt="Kuda Bank Logo" class="h-10 w-10">
-                                    <div>
-                                        <p class="font-medium text-gray-800">Olusola John Adanlawo</p>
-                                        <p class="text-sm text-gray-500">2:59 PM</p>
-                                    </div>
-                                </div>
-                                <p class="text-gray-800">₦3,600.00</p>
-                            </li>
+                        <ul id="transaction-history" class="divide-y divide-gray-200 p-4">
 
-                            <!-- Repeat the list item for each transaction -->
-                            <li class="flex items-center justify-between py-4 px-6">
-                                <div class="flex items-center space-x-3">
-                                    <img src="https://example.com/kuda-logo.png" alt="Kuda Bank Logo" class="h-10 w-10">
-                                    <div>
-                                        <p class="font-medium text-gray-800">Pos Transfer - Steve Okwubi</p>
-                                        <p class="text-sm text-gray-500">2:53 PM</p>
-                                    </div>
-                                </div>
-                                <p class="text-gray-800">₦1,780.00</p>
-                            </li>
 
-                            <!-- Transaction item example with positive balance -->
-                            <li class="flex items-center justify-between py-4 px-6">
-                                <div class="flex items-center space-x-3">
-                                    <img src="https://example.com/kuda-logo.png" alt="Kuda Bank Logo" class="h-10 w-10">
-                                    <div>
-                                        <p class="font-medium text-gray-800">Abdulbaaki Adekule Akinade</p>
-                                        <p class="text-sm text-gray-500">12:26 PM</p>
-                                    </div>
-                                </div>
-                                <p class="text-green-500 font-medium">+₦20,000.00</p>
-                            </li>
 
-                            <!-- Repeat list items for other transactions -->
 
                         </ul>
                     </div>
@@ -434,38 +400,76 @@
 
 <script>
     document.getElementById('paystack-btn').addEventListener('click', function () {
-    // Show the spinner and hide the button
-    const spinner = document.getElementById('spinner');
-    const button = this;
-    
-    button.classList.add('hidden'); // Hide the button
-    spinner.classList.remove('hidden'); // Show the spinner
-    
-    // Wait for 2 seconds
-    setTimeout(() => {
-        // Call Paystack setup
-        var handler = PaystackPop.setup({
-            key: 'pk_live_e99f325375ceeaf6e5b48e14ff423f6ad031ebe0', // Replace with your public key
-            email: 'adeshina93@gmail.com', // Customer's email
-            amount: 500000, // Amount in kobo (for example, 5000 NGN = 500000 kobo)
-            currency: 'NGN',
-            ref: 'ref_' + new Date().getTime(), // Generate a unique reference
-            callback: function (response) {
-                // Handle successful payment here
-                console.log('Payment complete! Reference: ' + response.reference);
-                // Call your server to verify the transaction and top up balance
-            },
-            onClose: function () {
-                alert('Transaction was not completed, window closed.');
-            }
-        });
-        handler.openIframe();
+        // Show the spinner and hide the button
+        const spinner = document.getElementById('spinner');
+        const button = this;
 
-        // Hide the spinner and show the button again
-        spinner.classList.add('hidden');
-        button.classList.remove('hidden');
-    }, 2000); // 2 seconds
-});
+        button.classList.add('hidden'); // Hide the button
+        spinner.classList.remove('hidden'); // Show the spinner
+
+        // Wait for 2 seconds
+        setTimeout(() => {
+    var handler = PaystackPop.setup({
+        key: "pk_test_bed6ca78582b257067e0e584f5304c5ea61fd5a8", // Replace with your public key
+        email: "adeshina93@gmail.com", // Customer's email
+        amount: 500000, // Amount in kobo
+        currency: "NGN",
+        ref: "ref_" + new Date().getTime(), // Unique reference
+        callback: function (response) {
+            console.log("Payment complete! Reference: " + response.reference);
+
+            // Check if currentUserData is defined
+            if (!currentUserData) {
+                console.error("User data not found!");
+                alert("Error: Unable to update balance. User not logged in.");
+                return;
+            }
+
+            // Parse user ID
+            const { uid } = JSON.parse(currentUserData);
+
+            // Fetch and update balance
+            async function updateMoney() {
+                try {
+                    // Fetch the user's current balance
+                    const balanceDoc = await db.collection("users").doc(uid).get();
+                    const userData = balanceDoc.data();
+
+                    if (!userData || userData.balance === undefined) {
+                        alert("Balance data not found!");
+                        console.log(userData.balance);
+                    }
+
+                    // Calculate new balance
+                    const newBalance = userData.balance + 5000;
+
+                    // Update the balance in Firestore
+                    await db.collection("users").doc(uid).update({
+                        balance: newBalance,
+                    });
+
+                    alert("Balance successfully updated! New Balance: " + newBalance);
+                } catch (error) {
+                    console.error("Error updating balance:", error);
+                    alert("Failed to update balance. Please contact support.");
+                }
+            }
+
+            // Call the function to update balance
+            updateMoney();
+        },
+        onClose: function () {
+            alert("Transaction was not completed, window closed.");
+        },
+    });
+
+    handler.openIframe();
+
+    // Reset spinner and button visibility
+    spinner.classList.add("hidden");
+    button.classList.remove("hidden");
+}, 2000); // 2 seconds delay
+    });
 
 </script>
 
@@ -491,12 +495,13 @@
                 const userData = doc.data();
 
                 // Update UI elements with data from the Firestore document
-                document.getElementById("user-firstname").innerText = userData.firstname || "N/A";
-                document.getElementById("user-balance").innerText = userData.balance ? "N" + userData.balance : "N/A";
+                document.getElementById("user-firstname").innerText = `${userData.firstname}`;
+                document.getElementById("user-email").innerText = userData.email || "N/A";
+                document.getElementById("user-balance").innerText = `₦${userData.balance.toLocaleString()}`;
                 document.getElementById("user-address").innerText = userData.address || "N/A";
                 document.getElementById("user-bvn").innerText = userData.bvn || "N/A";
                 document.getElementById("user-phone").innerText = userData.phone || "N/A";
-                document.getElementById("user-email").innerText = userData.email || "N/A";
+
                 document.getElementById("user-country").innerText = userData.country || "N/A";
                 document.getElementById("user-account").innerText = userData.account || "N/A";
 
@@ -615,5 +620,164 @@
             // Navigate to another page or perform other actions
             window.location.href = "./card.html"; // Replace with your URL
         }, 2000); // 3 seconds
+    });
+</script>
+
+<!-- display hsitory -->
+<script>
+    document.addEventListener("DOMContentLoaded", async function () {
+        // Assuming the user's UID is stored in local storage
+        const currentUserData = localStorage.getItem("currentUser");
+        if (!currentUserData) {
+            console.log("Invalid user");
+            return;
+        }
+
+        const { uid } = JSON.parse(currentUserData);
+        const transactionHistoryList = document.getElementById("transaction-history");
+
+        try {
+            // Retrieve the user's transaction history from Firestore
+            const transactionSnapshot = await db.collection("users").doc(uid).collection("transaction").get();
+
+            // Check if transactions exist
+            if (transactionSnapshot.empty) {
+                transactionHistoryList.innerHTML = "<li class='text-gray-500'>No transaction history available.</li>";
+                return;
+            }
+
+            // Loop through each transaction and display it
+            transactionSnapshot.forEach((doc) => {
+                const transaction = doc.data();
+
+                // Create a list item for each transaction
+                const listItem = document.createElement("li");
+                listItem.classList.add("py-2", "text-gray-800");
+
+                // Format and insert transaction details into the list item
+                listItem.innerHTML = `
+    <div class="p-4 bg-white shadow-md rounded-lg border border-gray-200 hover:shadow-lg transition-shadow duration-300">
+        <div class="flex items-center justify-between">
+            <span class="font-bold text-lg text-gray-800">₦${transaction.amount.toFixed(2)}</span>
+            <span class="text-sm text-gray-400">${new Date(transaction.timestamp.seconds * 1000).toLocaleString()}</span>
+        </div>
+        <div class="mt-2">
+            <span class="block text-sm text-gray-500">Recipient:</span>
+            <span class="text-base text-gray-700 font-medium">${transaction.recipient}</span>
+        </div>
+        <div class="mt-2">
+            <span class="block text-sm text-gray-500">Description:</span>
+            <span class="text-base text-gray-700">${transaction.description || "No description provided"}</span>
+        </div>
+    </div>
+`;
+
+
+                // Append the list item to the transaction history list
+                transactionHistoryList.appendChild(listItem);
+            });
+        } catch (error) {
+            console.error("Error fetching transaction history:", error.message);
+        }
+    });
+</script>
+
+<!-- beneficiary display -->
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        // Function to fetch and display beneficiaries
+        async function displayBeneficiaries() {
+            const currentUserData = localStorage.getItem('currentUser');
+            if (!currentUserData) {
+                alert("No user is currently logged in.");
+                return;
+            }
+
+            const { uid } = JSON.parse(currentUserData);
+            const userRef = db.collection("users").doc(uid).collection("beneficiary");
+
+            try {
+                const beneficiariesSnapshot = await userRef.get();
+                const beneficiarySection = document.querySelector('.beneficiary-section');
+
+                beneficiarySection.innerHTML = ""; // Clear previous data
+
+                if (beneficiariesSnapshot.empty) {
+                    beneficiarySection.innerHTML = "<p>No beneficiaries found.</p>";
+                    return;
+                }
+
+                beneficiariesSnapshot.forEach((doc) => {
+                    const beneficiaryData = doc.data();
+                    const initial = beneficiaryData.firstname.charAt(0).toUpperCase();
+
+                    const beneficiaryCard = document.createElement("div");
+                    beneficiaryCard.className = "beneficiary-card flex flex-col items-center px-6 py-6 bg-white shadow-lg rounded-lg border border-gray-300 max-w-[150px] mr-6 hover:shadow-xl transition-shadow duration-300";
+
+                    beneficiaryCard.innerHTML = `
+    <!-- Circular Border for Initials -->
+    <div class="beneficiary-initials w-12 h-12 bg-gradient-to-r from-yellow-400 to-orange-500 text-white rounded-full flex items-center justify-center font-bold text-sm ring-4 ring-gray-100 mb-3">
+        ${initial}
+    </div>
+
+    <!-- Beneficiary Details -->
+    <div class="text-center space-y-1 text-sm">
+        <p class="font-bold text-gray-900 leading-tight">${beneficiaryData.firstname}</p>
+        <p class="font-bold text-gray-900 leading-tight">${beneficiaryData.lastname}</p>
+        <p class="font-medium text-gray-600 leading-tight">${beneficiaryData.account}</p>
+    </div>
+`;
+                    beneficiarySection.appendChild(beneficiaryCard);
+                });
+            } catch (error) {
+                console.error("Error fetching beneficiaries:", error);
+                alert("There was an error fetching beneficiaries. Please try again.");
+            }
+        }
+
+        // Call the display function on page load
+        displayBeneficiaries();
+    });
+</script>
+
+<!-- toggle -->
+<script>
+    document.getElementById('toggle-view').addEventListener('click', function () {
+        const beneficiarySection = document.querySelector('.beneficiary-section');
+        const toggleView = document.getElementById('toggle-view');
+
+        // Toggle visibility of beneficiary-section
+        if (beneficiarySection.classList.contains('hidden')) {
+            beneficiarySection.classList.remove('hidden');
+            toggleView.textContent = 'Hide Beneficiary'; // Update button text
+        } else {
+            beneficiarySection.classList.add('hidden');
+            toggleView.textContent = 'View All'; // Update button text
+        }
+    });
+
+</script>
+
+<!-- image display -->
+<script>
+    firebase.auth().onAuthStateChanged((user) => {
+        if (user) {
+            const userId = user.uid;
+
+            // Retrieve the profile image URL from Firestore
+            db.collection("Profile").doc(userId).get().then((doc) => {
+                if (doc.exists && doc.data().profileimage) {
+                    // Set the saved profile image URL as the src of the image element
+                    document.getElementById("dashboardLogo").src = doc.data().profileimage;
+                } else {
+                    console.log("No profile image found.");
+                }
+            }).catch((error) => {
+                console.error("Error retrieving profile image: ", error);
+            });
+
+        } else {
+            console.log("No user is signed in.");
+        }
     });
 </script>
